@startuml

title __IMPL's Class Diagram__\n

  namespace com.neliyenn {
    namespace service {
      namespace impl {
        class com.neliyenn.service.impl.CommentServiceImp {
            + CommentServiceImp()
            + save()
        }
      }
    }
  }
  

  namespace com.neliyenn {
    namespace service {
      namespace impl {
        class com.neliyenn.service.impl.PostServiceImp {
            + PostServiceImp()
            + delete()
            + findAllOrderedByDatePageable()
            + findByUserOrderedByDatePageable()
            + findForId()
            + save()
            - subtractPageByOne()
        }
      }
    }
  }
  

  namespace com.neliyenn {
    namespace service {
      namespace impl {
        class com.neliyenn.service.impl.UserServiceImp {
            {static} + USER_ROLE : String
            - passwordEncoder : PasswordEncoder
            + UserServiceImp()
            + findByEmail()
            + findByUsername()
            + saveUser()
        }
      }
    }
  }
  

  com.neliyenn.service.impl.CommentServiceImp .up.|> com.neliyenn.service.CommentService
  com.neliyenn.service.impl.CommentServiceImp o-- com.neliyenn.repository.CommentRepository : commentRepository
  com.neliyenn.service.impl.PostServiceImp .up.|> com.neliyenn.service.PostService
  com.neliyenn.service.impl.PostServiceImp o-- com.neliyenn.repository.PostRepository : postRepository
  com.neliyenn.service.impl.UserServiceImp .up.|> com.neliyenn.service.UserService
  com.neliyenn.service.impl.UserServiceImp o-- com.neliyenn.repository.RoleRepository : roleRepository
  com.neliyenn.service.impl.UserServiceImp o-- com.neliyenn.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
